objects/ServiceInterface__mdt.object
<CustomObject>
    <fields>
        <fullName>AttachmentName__c</fullName>
        <label>AttachmentName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CertificateName__c</fullName>
        <label>CertificateName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailDisplayName__c</fullName>
        <label>EmailDisplayName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailSubject__c</fullName>
        <label>EmailSubject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <label>Environment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FromEmailId__c</fullName>
        <label>FromEmailId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityRecordTypeId__c</fullName>
        <label>Opportunity RecordType Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceTimeOut__c</fullName>
        <label>ServiceTimeOut</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ServiceURL__c</fullName>
        <label>ServiceURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Success_File_Name__c</fullName>
        <label>Success File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToEmailList__c</fullName>
        <label>ToEmailList</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>effective_date__c</fullName>
        <description>This is used in castlight integration to store opportunity effective date for go live</description>
        <label>effective_date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>parameter1__c</fullName>
        <description>this is generic service parameter. Different interfaces can use it differently. Castlight integration will use this to store castlight product names separated by &apos;,&apos;</description>
        <label>parameter1</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>parameter2__c</fullName>
        <description>This is generic service parameter2. Service interface specific parameters can be stored in this. For castlight integration, this will be used to store product stages applicable for sending data to castlight</description>
        <label>parameter2</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>ServiceInterface</label>
    <pluralLabel>ServiceInterfaces</pluralLabel>
</CustomObject>